--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Mohammed Manssour <manssour.mohammed@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@ef-carbon/fetch": "^2.1.3",
+    "@types/node": "^10.12.18",
     "ava": "^1.0.1",
     "cross-env": "^5.2.0",
+    "node-fetch": "^2.3.0",
     "prettier": "1.15.3",
     "typescript": "^3.2.2"
   }
