--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
 		"outDir": "./dist/",
+		"pretty": true,
+		"declaration": true,
 		"lib": ["es2015"],
 		"sourceMap": true,
 		"noImplicitAny": true,
