--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
 		"sourceMap": true,
 		"noImplicitAny": true,
 		"module": "CommonJS",
-  }
+  	},
+  	"exclude": [
+		"node_modules",
+		"exampleApp"
+	]
 }
