add test command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/lib/index.js",
   "scripts": {
     "build:dev": "cross-env NODE_ENV=devlopment tsc --p tsconfig.json",
-    "dev:watch": "cross-env NODE_ENV=devlopment tsc --outDir dist --pretty --watch"
+    "dev:watch": "cross-env NODE_ENV=devlopment tsc --outDir dist --pretty --watch",
+    "test": "ava tests"
   },
   "author": "Mohammed Manssour <manssour.mohammed@gmail.com>",
   "license": "ISC",
