--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@ef-carbon/fetch": "^2.1.3",
     "@types/node": "^10.12.18",
+    "@types/node-fetch": "^2.1.4",
     "ava": "^1.0.1",
     "cross-env": "^5.2.0",
     "node-fetch": "^2.3.0",
